root/css/main.css
/* ... */
#page-title.search-bg {
  height:auto;
}

#page-title h2 {
  font-size:24px;
  color:#222;
  padding:0.5em 0 0.5em 1em;
  height:2em;
  white-space:nowrap;
  position:relative;
}

#page-title h2 .bench-update{
  padding-top:5px;
}

#page-title h2 .note {
  font-size:0.5em;
  font-weight:normal;
  position:absolute;
  bottom:1.6em;
  left:6em;
  color:#333;
}


/*********************************

           WIDGETS

   ********************************* */

/* Styles for the standard widget */

li div.widget-container {
  padding:0;
  margin:0 0 0.7em 0.7em;
  display:none;
  background-color:#FFFFFF;
  position:relative;
  border:1px solid #97A1AD;
}


div.widget-container:hover{

  -moz-box-shadow:    1px 2px 1px 1px #ccc;
  -webkit-box-shadow: 1px 2px 1px 1px #ccc;
  box-shadow:         1px 2px 1px 1px #ccc;

}

.content {
  padding: 1em 1em 1.8em 1em;
  overflow-x:scroll;
  overflow-y:hidden; /* seems to fix vertical scroll issue in Safari */
  list-style:disc outside none;
  clear:both;
  font-size:0.9em;
}

.widget-header, .species-bg, .search-bg, .species_list-bg  {
    background-color: #C2D1DF;
}

.widget-container:hover #widget-footer,
.widget-header:hover .ui-icon,
.widget-container:hover .widget-header .ui-icon-large,
li.visible div.widget-container {
    display:block;
}

.widget-container #widget-feed,
.widget-container #widget-footer,
.widget-header .ui-icon,
.widget-container.minimized:hover #widget-footer{
    display:none;
}

.widget-header h3 {
  margin:0px;
  padding:0.3em 0.3em 0.5em;
  border:0;
  height:1em;
  cursor:pointer;
}

.widget-container #widget-footer {
  position:absolute;
  bottom:0.4em;
  right:0.3em;
}

#widget-footer a {
  padding:0 0.3em;
  margin:0 0.2em;
}

.widget-header .ui-icon {
  margin:0.2em;
}

.widget-header div.ui-icon-large {
  float:right;
  cursor:pointer;
  margin:0.4em;
}

.widget-header h3 div.module-min {
  float:left;
  margin:2px;
}

.widget-header h3 span {
  float:left;
}

.widget-container div.loading {
  width:100%;
  text-align:center;
  padding:1em 0 0;
  height:150px;
}

/* colour changes for the different types of widgets */

#widget-me {
    border-color: #BDB8A4;
}

#widget-tools {
    border-color: #ABA0B8;
}

#widget-me .widget-header, .navigation .me.ui-selected, .me-bg {
    background-color: #E3DDC5;
}
#widget-resources .widget-header, .navigation .resources.ui-selected, .resources-bg, #widget-resources .navigation .ui-selected {
    background-color: #C2D1DF;
}
#widget-tools .widget-header, .navigation .tools.ui-selected, .tools-bg  {
    background-color: #CFC1DE;
}
#widget-submit_data .widget-header, .navigation .submit_data.ui-selected, .submit_data-bg, #submit_data .navigation .ui-selected {
    background-color: #C2D1DF;
}
/* END styles for standard widgets */





/* widget field titles: ie Identification > IDs */
div.field {
  clear:left;
  float:left;
  line-height:1.2em;
  padding:0.2em;
  width:100%;
  position:relative;
}

div.field-title {
  display:inline-table;
  float: left;
  text-align: right;
  font-size: 1em;
  padding:0 0.5em 0 0;
  width: 10em;
  font-weight: bold;
}

div.field-content {
  display:inline-table;
  float:none;
  width: calc(100% - 11em);
}

.one-column div.field-title {
  float:none;
  position:static;
  vertical-align:top;
  table-layout:fixed;
}

/* Curator specific fields */
div.field-curator {
  margin:1em;
  padding:1em;
  background:#CCFFFF;
  border:1px solid gray;
  width:80%;
}

div.field-curator span.desc {
  position:absolute;
  right:0.4em;
  bottom:0.2em;
}




/* Subfields: fields inside of fields */
/* widget field titles: ie Identification > IDs */

div.field .field .field-title {
  width: 7em;
}

div.field .field .field-content {
  max-width:35em;
}



/* Special field elements */
/* Google Map */
div#google-map {
    position:relative;
    height: auto;
    overflow:hidden;
}

/* curator comment */
.curator-comment-field {
    padding: 0.3em 0;
}

.curator-comment-field .evidence {
    display: inline;
}



/* dataheader and datacell are used in page-wide tables such as in the
   listing of all rearrangements by chrom on the rearrangment page */

.code             {
                    background-color: #CCFFFF;
                    font-family: Courier, monospace;
                    border:1px solid grey;
                    font-size:1em;
                    margin:1em;
                    padding:0.5em;
}



/* ===============================================

       Data-specific styles

   =============================================== */
.species { font-style: italic; }

/* The variation summary */
.cgc-strain {   /* strains available from the CGC */
    font-style:italic;
}

.strains-with-single-variation {
     font-weight:bold;
}

/* image icon ex linking from expression widget to image*/
.img-link {
    cursor: pointer;
}
.img-link span{
    vertical-align: middle;
    display: inline-block;
    margin-right: 0.2em;
}

/* cytoscape legend */
#cyto_legend {
    width:15em;
    position:absolute;
    right:0;
    z-index:1001; /*
                     greater than cy div z-index 1000
                     smaller than dropdown menu in search #searchSelect ul */
}

#cyto_legend div {
    margin: 0.2em 0 0.4em;
}


/* multi-view styling */
.multi-view-container label {
  padding: 0 1em 1em 0.4em;
  display: inline-block;
}

/* GO table styles */
#go_summary_Molecular_function table tbody td:nth-child(2) > ul,
#go_summary_Cellular_component table tbody td:nth-child(2) > ul,
#go_summary_Biological_process table tbody td:nth-child(2) > ul{
  list-style-type: none;
}

#go_summary_Molecular_function table tbody td:nth-child(1),
#go_summary_Cellular_component table tbody td:nth-child(1),
#go_summary_Biological_process table tbody td:nth-child(1) {
  width: 60px;
}

/* FPKM control statistics table on Expression widget */
table#table_control_data_by td:nth-child(2),
table#table_control_data_by td:nth-child(3) {
  width: 40%;
}
/* ... */

